[gd_scene load_steps=4 format=3 uid="uid://p6yh50rdne23"]

[ext_resource type="Script" uid="uid://b1yogkj2s51bj" path="res://scenes/entities/enemies/enemy.gd" id="1_c8ylr"]
[ext_resource type="PackedScene" uid="uid://d0sia5n585lmr" path="res://components/comp_scenes/health_component.tscn" id="1_essrt"]
[ext_resource type="PackedScene" uid="uid://cukc82vtfn24w" path="res://components/comp_scenes/hurtbox/hurtbox_component.tscn" id="2_c8ylr"]

[node name="Enemy" type="CharacterBody2D" unique_id=1274612911]
script = ExtResource("1_c8ylr")

[node name="HealthComponent" parent="." unique_id=1351455396 instance=ExtResource("1_essrt")]

[node name="HurtboxComponent" parent="." unique_id=64858125 instance=ExtResource("2_c8ylr")]

[connection signal="on_die" from="HealthComponent" to="." method="_on_health_component_on_die"]
